--- a/dashboard_mentoria/package.json
+++ b/dashboard_mentoria/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "mongoose": "^8.0.3",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.3",
@@ -17,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "recharts": "^2.10.3",
+    "sweetalert2": "^11.6.13",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
